--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-laravel-csrf",
   "version": "1.0.0",
-  "description": "",
+  "description": "This Package will allow you to include the Laravel's csrf token to the forms inside the Vue app.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,5 +23,6 @@
   "license": "ISC",
   "devDependencies": {
     "vue": "^2.5.13"
-  }
+  },
+  "homepage": "https://github.com/mohkoma/vue-laravel-csrf"
 }
